# redis-memory-usage

./: README.md  keys.py  pyproject.toml  run_tests.sh  simpleTest.csv
tests/: client.py  test_csv_data.py  test_synthetic_data.py
